Automatically build docker image and use it in action
Docker image for action is built on tag
Use docker image pulled from ghcr when running action

Signed-off-by: Nicolas VINCENT <nicolas.vincent@vossloh.com>

--- a/action.yml
+++ b/action.yml
@@ -45,3 +45,7 @@ inputs:
       Directory to search for board configuration files and passed to twister
       option --board-root.
     required: false
+
+runs:
+  using: 'docker'
+  image: 'docker://ghcr.io/siemaapplications/zephyr-action:v1-beta'
