Fix tag of docker image
Add 'set -x' in entrypoint to help with debug
image is tagged v1-beta1 not v1-beta. Jump to v1-beta2

Signed-off-by: Nicolas VINCENT <nicolas.vincent@vossloh.com>

--- a/action.yml
+++ b/action.yml
@@ -48,4 +48,4 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/siemaapplications/zephyr-action:v1-beta'
+  image: 'docker://ghcr.io/siemaapplications/zephyr-action:v1-beta2'
