adds action arg to inject cmake arguments to build
Adds possibility to inject extra build arguments passed directly to
cmake from west command line

Signed-off-by: Nicolas VINCENT <nicolas.vincent@vossloh.com>

--- a/action.yml
+++ b/action.yml
@@ -71,6 +71,11 @@ inputs:
       Directory where built files are placed.
     required: false
 
+  cmake_extra_args:
+    description: >
+      arguments passed directly to cmake by west command.
+    required: false
+
 
 runs:
   using: 'docker'
