Document update_extra_args input
Adds definition of action inputs into yaml action definition

Signed-off-by: Nicolas VINCENT <nicolas.vincent@vossloh.com>

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,10 @@ inputs:
     required: false
     default: false
 
+  update_extra_args:
+    description: 'When defined, must contains space separated list of modules to update'
+    requried: false
+
   twister:
     description: >
       When set to true, runs twister test suite on directory specified in
