Fix #2: adds post-entrypoint for cleanup
remove .west folder on post-entrypoint

Signed-off-by: Nicolas VINCENT <nicolas.vincent@vossloh.com>

--- a/action.yml
+++ b/action.yml
@@ -83,4 +83,6 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/siemaapplications/zephyr-action:v2.0.1'
+  image: 'docker://ghcr.io/siemaapplications/zephyr-action:v2.0.2'
+  entrypoint: '/entrypoint.sh'
+  post-entrypoint: '/cleanup.sh'
