--- a/action.yml
+++ b/action.yml
@@ -118,6 +118,6 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/siemaapplications/zephyr-action:v3.1.1'
+  image: 'Dockerfile'
   entrypoint: '/entrypoint.sh'
   post-entrypoint: '/cleanup.sh'
